# oil_reservoir_synthesizer

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: style.yml  testing.yml
src/oil_reservoir_synthesizer/: __init__.py  _oil_simulator.py  _perlin.py  _prime_generator.py  _shaped_perlin.py
tests/: test_oil_simulator.py
